# libcoro

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: libcoro.pc.in  libcoroConfig.cmake.in
examples/: CMakeLists.txt  sleep_tasks.c
include/: libcoro.h
include/coro/: future.h  generator.h
include/internal/: loop_internal.h  offload_internal.h  pal_thread.h
include/libcoro/: future.h  generator.h  libcoro.h  loop.h  offload.h  raw_setup.h  task.h
include/private/: future.h  generator.h  loop.h  offload.h  task.h
include/public/: libcoro.h
ports/freertos_qemu/: FreeRTOSConfig.h  bare_tls_shim.c  boot_fr.c  boot_raw.c  build.sh  build_future.sh  build_getsockname.sh  build_http.sh  build_https.sh  build_keepalive.sh  build_probe.sh  build_raw.sh  build_raw6.sh  build_tls.sh  build_tls_raw.sh  build_ws.sh  build_wss.sh  lwipopts.h  mps2_an385.ld  probe_wolfssl.c  raw_setup.h  startup_mps2.c  test_fr_echo.c  test_fr_future.c  test_fr_getsockname.c  test_fr_http.c  test_fr_https.c  test_fr_keepalive.c  test_fr_offload.c  test_fr_raw.c  test_fr_raw6.c  test_fr_tls.c  test_fr_tls_raw.c  test_fr_ws.c  test_fr_wss.c  tls_stub.c  user_settings.h
ports/freertos_qemu/arch/: cc.h
ports/freertos_qemu/raw_arch/: lwipopts.h  lwipopts_raw.h  raw_inet.h
ports/freertos_qemu/raw_arch/arch/: cc.h
ports/lwip/: lwipopts.h
src/: future.c  generator.c  offload.c  offload_stub.c  task.c
src/loop/: linux.c  linux_epoll.c  linux_select.c  lwip_raw.c  lwip_select.c  windows.c
src/pal/: thread_freertos.c  thread_posix.c  thread_win.c
tests/: main.c  test_emit.c  test_empty_task.c  test_loop.c  test_lwip_echo.c  test_nested_task.c  test_offload.c
